# ml-code-analysis-tool

./: .gitignore  README.md  example_file.py  pyproject.toml
example_files/: example.cs
example_tests/: exampleTests.cs  test_example_file.py
src/test_generator/: celebrate.py  llm_client.py  main.py
src/test_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: exampleTests.cs  test_example_file.py  test_llm_client.py  test_main.py
